--- a/pages/pools/query.css
+++ b/pages/pools/query.css
@@ -23,7 +23,7 @@ td.status_degraded {
 /* pool image and name */
 
 td.pool_name {
-	padding: 8px 0px !important;
+	padding: 8px 0 !important;
 	vertical-align: middle;
 }
 td.pool_name img {
