--- a/theme/default/common.css
+++ b/theme/default/common.css
@@ -120,7 +120,7 @@ table.buttontable tr td {
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeeee', endColorstr='#eedddd');
 	background-image: linear-gradient(#fee, #edd);
 	text-align: center;
-	padding: 4px 0px;
+	padding: 4px 0;
 }
 /* widetable */
 
@@ -908,7 +908,7 @@ pre.command_box {
 	background: #eef;
 	padding: 10px;
 	border: 1px solid #ccc;
-	margin: 0px 0 10px 0;
+	margin: 0 0 10px 0;
 	overflow: scroll;
 }
 p.command_box {
