--- a/theme/default/layout.css
+++ b/theme/default/layout.css
@@ -49,7 +49,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888', endC
 	font-weight: bold;
 	font-size: 230%;
 	text-decoration: none;
-	text-shadow: 0px -1px 1px rgba(0,0,0,0.5);
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.5);
 }
 #logotitle:hover {
 	color: #666;
@@ -83,7 +83,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888', endC
 	display: block;
 	clear: both;
 	min-height: 15px;
-	margin-top: 0px;
+	margin-top: 0;
 	text-align: left;
 	border-bottom: 1px solid #666;
 	-moz-border-radius: 10px;
@@ -94,7 +94,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#888888', endC
 	box-sizing: border-box;
 }
 div.menu-spacer {
-	margin: 0px 0 0px 20px;
+	margin: 0 0 0 20px;
 	letter-spacing: 2px;
 }
 #menu a, #menu a:visited {
